added a featurin that shows the definition of the selected word

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,7 +11,8 @@
       <header>
         <h1>WordLink Lookup</h1>
       </header>
-      <p>Thats my word: <span class="myword">ola sou o inner html</span></p>
+      <h1 class="myword"></h1>
+      <p class="definition"></p>
     </div>
     <script src="pop.js"></script>
   </body>
